# lidar_image_fusion

./: .gitignore  README.md
hardware_lidar_robosense/: .gitmodules  README.md
hardware_lidar_robosense/launch/: driver.launch
hardware_lidar_robosense/robosense/: .gitignore  README.md
hardware_lidar_robosense/robosense/robosense_driver/: CMakeLists.txt  nodelet_robosense.xml  package.xml
hardware_lidar_robosense/robosense/robosense_driver/cfg/: RobosenseNode.cfg
hardware_lidar_robosense/robosense/robosense_driver/include/robosense_driver/: driver.h  input.h  robosense_status.h  status.h  time_conversion.hpp
hardware_lidar_robosense/robosense/robosense_driver/launch/: nodelet_manager.launch
hardware_lidar_robosense/robosense/robosense_driver/src/: vdump
hardware_lidar_robosense/robosense/robosense_driver/src/driver/: CMakeLists.txt  driver.cc  nodelet.cc  robosense_node.cc
hardware_lidar_robosense/robosense/robosense_driver/src/lib/: CMakeLists.txt  input.cc
hardware_lidar_robosense/robosense/robosense_driver/tests/: diagnostic_agg.yaml  timeconversiontest.cpp
hardware_lidar_robosense/robosense/robosense_msgs/: CMakeLists.txt  package.xml
hardware_lidar_robosense/robosense/robosense_msgs/msg/: RobosensePacket.msg  RobosenseScan.msg
hardware_lidar_robosense/robosense/robosense_pointcloud/: CMakeLists.txt  nodelets.xml  package.xml
hardware_lidar_robosense/robosense/robosense_pointcloud/cfg/: CloudNode.cfg  TransformNode.cfg
hardware_lidar_robosense/robosense/robosense_pointcloud/include/robosense_pointcloud/: calibration.h  colors.h  convert.h  datacontainerbase.h  eigen_utils.h  point_types.h  pointcloudXYZIR.h  rawdata.h  transform.h  transform_extractor.h
hardware_lidar_robosense/robosense/robosense_pointcloud/launch/: convert_nodelet.launch  momenta-rs-ruby128-compensate.launch  momenta-rs-ruby128-no-compensate-offline.launch  momenta-rs-ruby128-no-compensate.launch  momenta-rs-ruby128.launch  transform_nodelet.launch
hardware_lidar_robosense/robosense/robosense_pointcloud/params/: robosense-ruby128.yaml
hardware_lidar_robosense/robosense/robosense_pointcloud/rviz/: vlp128.rviz
hardware_lidar_robosense/robosense/robosense_pointcloud/src/conversions/: CMakeLists.txt  bag_extractor.cc  cloud_node.cc  cloud_nodelet.cc  convert.cc  pointcloudXYZIR.cc  static_tf_node.cc  transform.cc  transform_extractor.cc  transform_node.cc  transform_nodelet.cc
hardware_lidar_robosense/robosense/robosense_pointcloud/src/lib/: CMakeLists.txt  calibration.cc  rawdata.cc
hardware_lidar_robosense/robosense/script/: date.sh  topic_delay_test.py
lidar_camera/: .gitignore  CMakeLists.txt  README.md  package.xml
lidar_camera/config/: camera.yaml
lidar_camera/include/: common_utils.h  cute.hpp  evaluation.h  io.h  math_utils.h  plot.h  projector.h  projector_tools.h
lidar_camera/msg/: calib_envluate.msg
lidar_camera/src/: evaluation.cpp  fisheye2lidar.cpp  io.cpp  plot.cc  view_calib.cpp
solvepnp/: imageCloudPoints.txt
