<?xml version="1.0"?>
<package>
  <name>lidar_camera</name>
  <version>0.0.0</version>

  <description>
    This is a ROS implementation of Lidar calibration solution for Velodyne likes lidar.
  </description>

  <maintainer email="@wanshannnt.ai">wanshannnt</maintainer>

  <license>BSD</license>

  <author email="wanshannnt@wanshannnt.ai">wanshannnt</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>

</package>
