<?xml version="1.0"?>
<package format="2">
  <name>robosense_driver</name>
  <version>1.5.2</version>
  <description>
    ROS device driver for Robosense 3D LIDARs.
  </description>
  <maintainer email="victor@todo.todo">victor</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libpcap</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>robosense_msgs</depend>
  <depend>sensor_interface_msgs</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_robosense.xml"/>
  </export>
</package>
