<?xml version="1.0"?>
<package format="2">
  <name>robosense_msgs</name>
  <version>1.5.2</version>
  <description>
    ROS message definitions for Robosense 3D LIDARs.
  </description>
  <maintainer email="victor@todo.todo">victor</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
