<?xml version="1.0"?>
<package format="2">
  <name>robosense_pointcloud</name>
  <version>1.5.2</version>
  <description>
    Point cloud conversions for Robosense 3D LIDARs.
  </description>
  <maintainer email="victor@todo.todo">victor</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <depend>angles</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_interface_msgs</depend>
  <depend>tf</depend>
  <depend>robosense_driver</depend>
  <depend>robosense_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>tf_conversions</depend>
  

  <exec_depend>robosense_laserscan</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>tf2_ros</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
